Making the calculation of the bet price

--- a/index.css
+++ b/index.css
@@ -27,3 +27,9 @@ button {
     margin-bottom: 2px;
     margin-top: 2px;
 }
+.btn {
+    background-color: sienna;
+    width: -10%;
+    padding: 10px;
+    color: #fff;
+}
